tests/negative/neg_statement_label_assignment.safe
-- Test: neg_statement_label_assignment
-- Description: Statement labels before assignments remain unsupported.
-- Expected: REJECT unsupported_source_construct

package Statement_Label_Assignment_Test is

   type Counter is range 0 to 10;

   function Main is
      Value : Counter = 0;
   begin
      Label_1: Value = 1;
   end Main;

end Statement_Label_Assignment_Test;
